Adding dlls needed

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,88 @@
 .vs/d3dcompiler_47_og/v16/ipch/AutoPCH/56e5f858512e4c32/MAIN.ipch
 .vs/d3dcompiler_47_og/v16/ipch/AutoPCH/4800a1a33194c1b1/CCGENERALGAMEFUNCTIONS.ipch
 .vs/d3dcompiler_47_og/v16/ipch/AutoPCH/341caac3e1d79b98/API_CONSOLE.ipch
+x64/Release/d3dcompiler_47.pgd
+x64/Release/d3dcompiler_47.pdb
+x64/Release/d3dcompiler_47.lib
+x64/Release/d3dcompiler_47.exp
+x64/Release/d3dcompiler_47.dll
+d3dcompiler_47_og/x64/Release/win32.obj
+d3dcompiler_47_og/x64/Release/vc142.pdb
+d3dcompiler_47_og/x64/Release/unix.obj
+d3dcompiler_47_og/x64/Release/Stage.obj
+d3dcompiler_47_og/x64/Release/SDLInit.obj
+d3dcompiler_47_og/x64/Release/SDL2SoundEffects.obj
+d3dcompiler_47_og/x64/Release/SDL2Music.obj
+d3dcompiler_47_og/x64/Release/protocol.obj
+d3dcompiler_47_og/x64/Release/PrmFunctions.obj
+d3dcompiler_47_og/x64/Release/print.obj
+d3dcompiler_47_og/x64/Release/peer.obj
+d3dcompiler_47_og/x64/Release/packet.obj
+d3dcompiler_47_og/x64/Release/Music.obj
+d3dcompiler_47_og/x64/Release/lzio.obj
+d3dcompiler_47_og/x64/Release/lvm.obj
+d3dcompiler_47_og/x64/Release/lundump.obj
+d3dcompiler_47_og/x64/Release/LuaHook_Commands.obj
+d3dcompiler_47_og/x64/Release/LuaHook.obj
+d3dcompiler_47_og/x64/Release/lua.obj
+d3dcompiler_47_og/x64/Release/ltm.obj
+d3dcompiler_47_og/x64/Release/ltablib.obj
+d3dcompiler_47_og/x64/Release/ltable.obj
+d3dcompiler_47_og/x64/Release/lstrlib.obj
+d3dcompiler_47_og/x64/Release/lstring.obj
+d3dcompiler_47_og/x64/Release/lstate.obj
+d3dcompiler_47_og/x64/Release/lparser.obj
+d3dcompiler_47_og/x64/Release/loslib.obj
+d3dcompiler_47_og/x64/Release/lopcodes.obj
+d3dcompiler_47_og/x64/Release/lobject.obj
+d3dcompiler_47_og/x64/Release/loadlib.obj
+d3dcompiler_47_og/x64/Release/lmem.obj
+d3dcompiler_47_og/x64/Release/lmathlib.obj
+d3dcompiler_47_og/x64/Release/llex.obj
+d3dcompiler_47_og/x64/Release/list.obj
+d3dcompiler_47_og/x64/Release/liolib.obj
+d3dcompiler_47_og/x64/Release/linit.obj
+d3dcompiler_47_og/x64/Release/lgc.obj
+d3dcompiler_47_og/x64/Release/lfunc.obj
+d3dcompiler_47_og/x64/Release/ldump.obj
+d3dcompiler_47_og/x64/Release/ldo.obj
+d3dcompiler_47_og/x64/Release/ldebug.obj
+d3dcompiler_47_og/x64/Release/ldblib.obj
+d3dcompiler_47_og/x64/Release/lcode.obj
+d3dcompiler_47_og/x64/Release/lbaselib.obj
+d3dcompiler_47_og/x64/Release/lauxlib.obj
+d3dcompiler_47_og/x64/Release/lapi.obj
+d3dcompiler_47_og/x64/Release/host.obj
+d3dcompiler_47_og/x64/Release/HookFunctions.obj
+d3dcompiler_47_og/x64/Release/d3dcompiler_47_og_asm.obj
+d3dcompiler_47_og/x64/Release/d3dcompiler_47_og.obj
+d3dcompiler_47_og/x64/Release/d3dcompiler_47_og.log
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/Masm.write.1u.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/Masm.read.1u.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/link.write.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/link.read.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/link.delete.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/link.command.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/d3dcompiler_47.write.1u.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/d3dcompiler_47.lastbuildstate
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/CL.write.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/CL.read.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/CL.command.1.tlog
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.dll.recipe
+d3dcompiler_47_og/x64/Release/compress.obj
+d3dcompiler_47_og/x64/Release/ccPlayerStruct.obj
+d3dcompiler_47_og/x64/Release/ccPlayer.obj
+d3dcompiler_47_og/x64/Release/ccMemoryFunctions.obj
+d3dcompiler_47_og/x64/Release/ccMain.obj
+d3dcompiler_47_og/x64/Release/ccGeneralGameFunctions.obj
+d3dcompiler_47_og/x64/Release/ccGameProperties.obj
+d3dcompiler_47_og/x64/Release/ccCharacterFunctions.obj
+d3dcompiler_47_og/x64/Release/ccBossIAFunctions.obj
+d3dcompiler_47_og/x64/Release/ccBattleFunctions.obj
+d3dcompiler_47_og/x64/Release/CasualGamer.obj
+d3dcompiler_47_og/x64/Release/callbacks.obj
+d3dcompiler_47_og/x64/Release/API_Console.obj
+d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
+.vs/d3dcompiler_47_og/v16/Browse.VC.opendb
+.vs/d3dcompiler_47_og/v16/Browse.VC.db-wal
+.vs/d3dcompiler_47_og/v16/Browse.VC.db-shm
