--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+﻿################################################################################
+# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
+################################################################################
 
-.vs
-*.db
-x64
-d3dcompiler_47_og
+/.vs
