--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="ccPlayer.cpp" />
     <ClCompile Include="ccPlayerStruct.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Controls.cpp" />
     <ClCompile Include="d3dcompiler_47_og.cpp" />
     <ClCompile Include="enet\callbacks.c" />
     <ClCompile Include="enet\compress.c" />
@@ -236,6 +237,7 @@
     <ClInclude Include="ccPlayer.h" />
     <ClInclude Include="ccPlayerStruct.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Controls.h" />
     <ClInclude Include="d3dcompiler_47_og.h" />
     <ClInclude Include="enet\callbacks.h" />
     <ClInclude Include="enet\enet.h" />
