--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClCompile Include="Settings.cpp">
       <Filter>Source Files\Settings</Filter>
     </ClCompile>
+    <ClCompile Include="Controls.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="API_Console.h">
@@ -436,6 +439,9 @@
     </ClInclude>
     <ClInclude Include="Character.h">
       <Filter>Header Files\Player\Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="Controls.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
