--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
@@ -151,7 +151,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>d3dcompiler_47_og.def</ModuleDefinitionFile>
       <AdditionalLibraryDirectories>D:\Perfect Storm API\Perfect-Storm-API\d3dcompiler_47_og;C:\Program Files %28x86%29\Steam\steamapps\common\NARUTO SHIPPUDEN Ultimate Ninja STORM 4\dll\d3dcompiler_47_og;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;winmm.lib;ws2_32.lib;enet64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;CasualLibrary.lib;XInput.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;winmm.lib;ws2_32.lib;enet64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;CasualLibrary.lib;XInput.lib;D3dcompiler.lib;d3d11.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -169,6 +169,13 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Controls.cpp" />
     <ClCompile Include="d3dcompiler_47_og.cpp" />
+    <ClCompile Include="DirectX11Hook\DirectX11Hook.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui_demo.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui_draw.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui_impl_dx11.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui_impl_win32.cpp" />
+    <ClCompile Include="DirectX11Hook\imgui_widgets.cpp" />
     <ClCompile Include="enet\callbacks.c" />
     <ClCompile Include="enet\compress.c" />
     <ClCompile Include="enet\host.c" />
@@ -240,6 +247,17 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Controls.h" />
     <ClInclude Include="d3dcompiler_47_og.h" />
+    <ClInclude Include="DirectX11Hook\detours.h" />
+    <ClInclude Include="DirectX11Hook\imconfig.h" />
+    <ClInclude Include="DirectX11Hook\imgui.h" />
+    <ClInclude Include="DirectX11Hook\imgui_impl_dx11.h" />
+    <ClInclude Include="DirectX11Hook\imgui_impl_win32.h" />
+    <ClInclude Include="DirectX11Hook\imgui_internal.h" />
+    <ClInclude Include="DirectX11Hook\imstb_rectpack.h" />
+    <ClInclude Include="DirectX11Hook\imstb_textedit.h" />
+    <ClInclude Include="DirectX11Hook\imstb_truetype.h" />
+    <ClInclude Include="DirectX11Hook\stdafx.h" />
+    <ClInclude Include="DirectX11Hook\targetver.h" />
     <ClInclude Include="enet\callbacks.h" />
     <ClInclude Include="enet\enet.h" />
     <ClInclude Include="enet\list.h" />
