--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs
+d3dcompiler_47_og/x64/Release/d3dcompiler_47.tlog/link.delete.1.tlog
