Updated version_game in AutoUpdater

--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj
@@ -82,8 +82,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
-    <IncludePath>$(ProjectDir)src\SDL2_mixer\SDL2_mixer-2.0.4\include;$(ProjectDir)src\SDL2\SDL2-2.0.12\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)src\SDL2_mixer\SDL2_mixer-2.0.4\lib\x64;$(ProjectDir)src\SDL2\SDL2-2.0.12\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)DirectX11Hook;$(ProjectDir)src\SDL2_mixer\SDL2_mixer-2.0.4\include;$(ProjectDir)src\SDL2\SDL2-2.0.12\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)DirectX11Hook;$(ProjectDir)src\SDL2_mixer\SDL2_mixer-2.0.4\lib\x64;$(ProjectDir)src\SDL2\SDL2-2.0.12\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -142,7 +142,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;D3DCOMPILER_47_OG_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <WholeProgramOptimization>false</WholeProgramOptimization>
-	  <ProgramDataBaseFileName>$(TEMP)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(TEMP)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -151,11 +151,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>d3dcompiler_47_og.def</ModuleDefinitionFile>
       <AdditionalLibraryDirectories>D:\Perfect Storm API\Perfect-Storm-API\d3dcompiler_47_og;C:\Program Files %28x86%29\Steam\steamapps\common\NARUTO SHIPPUDEN Ultimate Ninja STORM 4\dll\d3dcompiler_47_og;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;XInput.lib;D3dcompiler.lib;d3d11.lib;winmm.lib;ws2_32.lib;enet64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;CasualLibrary.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;winmm.lib;ws2_32.lib;enet64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;CasualLibrary.lib;XInput.lib;D3dcompiler.lib;d3d11.lib;Wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="API_Console.cpp" />
+    <ClCompile Include="AudioPlayer.cpp" />
     <ClCompile Include="AutoUpdater.cpp" />
     <ClCompile Include="CasualGamer.cpp" />
     <ClCompile Include="ccBattleFunctions.cpp" />
@@ -167,7 +168,7 @@
     <ClCompile Include="ccMemoryFunctions.cpp" />
     <ClCompile Include="ccPlayer.cpp" />
     <ClCompile Include="ccPlayerStruct.cpp" />
-	<ClCompile Include="Controls.cpp" />
+    <ClCompile Include="Controls.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DirectX11Hook\DirectX11Hook.cpp" />
     <ClCompile Include="DirectX11Hook\imgui.cpp" />
@@ -187,6 +188,8 @@
     <ClCompile Include="enet\protocol.c" />
     <ClCompile Include="enet\unix.c" />
     <ClCompile Include="enet\win32.c" />
+    <ClCompile Include="FileParser.cpp" />
+    <ClCompile Include="GameMath.cpp" />
     <ClCompile Include="HookFunctions.cpp" />
     <ClCompile Include="LuaHook.cpp" />
     <ClCompile Include="LuaHook_Commands.cpp" />
@@ -221,22 +224,28 @@
     <ClCompile Include="lua\src\lvm.c" />
     <ClCompile Include="lua\src\lzio.c" />
     <ClCompile Include="lua\src\print.c" />
+    <ClCompile Include="MultiMatch.cpp" />
     <ClCompile Include="Music.cpp" />
     <ClCompile Include="PrmFunctions.cpp" />
     <ClCompile Include="SDL2\SDL2Music.cpp" />
     <ClCompile Include="SDL2\SDL2SoundEffects.cpp" />
     <ClCompile Include="SDL2\SDLInit.cpp" />
     <ClCompile Include="Settings.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="XfbinParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="d3dcompiler_47_og.def" />
     <MASM Include="d3dcompiler_47_og_asm.asm">
       <FileType>Document</FileType>
     </MASM>
+    <None Include="DirectX11Hook\MyTemplate.vstemplate" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="API_Console.h" />
+    <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="AutoUpdater.h" />
     <ClInclude Include="ccBattleFunctions.h" />
     <ClInclude Include="ccCharacterFunctions.h" />
@@ -271,6 +280,9 @@
     <ClInclude Include="enet\unix.h" />
     <ClInclude Include="enet\utility.h" />
     <ClInclude Include="enet\win32.h" />
+    <ClInclude Include="FileParser.h" />
+    <ClInclude Include="GameMath.h" />
+    <ClInclude Include="MultiMatch.h" />
     <ClInclude Include="Music.h" />
     <ClInclude Include="HookFunctions.h" />
     <ClInclude Include="LuaHook.h" />
@@ -305,7 +317,18 @@
     <ClInclude Include="SDL2\SDL2SoundEffects.h" />
     <ClInclude Include="SDL2\SDLInit.h" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="Vector3.h" />
+    <ClInclude Include="XfbinParser.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="CasualLibrary.lib" />
+    <Library Include="DirectX11Hook\detours.lib" />
+    <Library Include="enet64.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="DirectX11Hook\__TemplateIcon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
