--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
@@ -103,10 +103,10 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AutoUpdater.cpp">
-      <Filter>Source Files\API</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DownloadProgress.cpp">
-      <Filter>Source Files\API</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -206,13 +206,13 @@
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DX11 Initialize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="AutoUpdater.h">
-      <Filter>Header Files\API</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DownloadProgress.h">
-      <Filter>Header Files\API</Filter>
-    </ClInclude>
-    <ClInclude Include="DX11 Initialize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
